# bookstore

./: Dockerfile  db.sqlite3  docker-compose.yml  env.dev  pyproject.toml
.github/workflows/: ci.yml  test.yml
bookstore/: settings.py  urls.py
order/: factory.py  urls.py
order/migrations/: 0001_initial.py
order/models/: order.py
order/serializers/: order_serializers.py
order/tests/test_viewsets/: test_order_viewset.py
order/viewsets/: __init__.py  order_viewset.py
product/migrations/: 0001_initial.py  0002_rename_categories_product_category.py
product/models/: product.py
product/tests/test_viewsets/: test_category_viewset.py  test_product_viewset.py
product/viewsets/: product_viewset.py
