[tool.poetry]
name = "bookstore"
version = "0.1.0"
description = ""
authors = ["mawet <ra78161@uem.br>"]
readme = "README.md"
packages = [
    { include = "bookstore" },
    { include = "order" },
    { include = "product" }
]

# Versão correta do Python aqui!
[tool.poetry.dependencies]
python = ">=3.12"
django = ">=5.2.8,<6.0.0"
djangorestframework = ">=3.16.1,<4.0.0"
django-rest-framework = ">=0.1.0,<0.2.0"
django-extensions = ">=4.1,<5.0"
django-debug-toolbar = ">=6.1.0,<7.0.0"
psycopg2-binary = ">=2.9.11,<3.0.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=9.0.1,<10.0.0"
factory-boy = ">=3.3.3,<4.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
